Startpage Contrast-Fix

--- a/client/themeSwitcher.scss
+++ b/client/themeSwitcher.scss
@@ -3699,7 +3699,7 @@ $themes: (
 
     #TestingBackdoorUsername {
       background-color: $white !important;
-      color: $primary_text !important;
+      color: black !important;
     }
 
     #TestingBackdoorUsername option:hover, #TestingBackdoorUsername option:focus {
